# sea-orm-minimal-example

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: cake.rs  mod.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
